--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,19 @@
   font-size: large;
 }
 
+body {
+  background: url('./assets/web.png');
+}
+
+button {
+  padding: 15px 30px;
+  font-size: 16px;
+  border: none;
+  border-radius: 30px;
+  color: rgb(180, 220, 255);
+  background: rgb(40, 120, 205);
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
